# tast_khata

./: pyproject.toml
src/: main.py
src/controllers/: customer_services.py
src/core/: config.py
src/database/: connect.py  models.py
src/routers/: customer.py
src/schemas/: schemas.py
